<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.erik.gps.googleApiActivity}"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textColor="@color/colorPrimaryDark"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginLeft="10dp"
                android:text="Latitude"/>

            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/editTextLat"
                android:editable="false"
                android:focusable="false"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginLeft="10dp"
                android:text="Longitude" />

            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/editTextLong"
                android:editable="false"
                android:focusable="false"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginLeft="10dp"
                android:text="Speed"/>

            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/editTextSpeed"
                android:editable="false"
                android:focusable="false"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginLeft="10dp"
                android:text="Update"/>

            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/editTextDate"
                android:editable="false"
                android:focusable="false"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/buttonStart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:layout_margin="1dp"
                android:background="@color/colorPrimary"
                android:textColor="@color/abc_primary_text_disable_only_material_dark"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/buttonStop"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/stop"
                android:layout_margin="1dp"
                android:background="@color/colorPrimary"
                android:textColor="@color/abc_primary_text_disable_only_material_dark"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/buttonGuardar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/guardar"
                android:layout_margin="1dp"
                android:background="@color/colorPrimary"
                android:textColor="@color/abc_primary_text_disable_only_material_dark"
                android:layout_weight="1"/>


        </LinearLayout>


    </LinearLayout>

</LinearLayout>
